--- a/logging.ini
+++ b/logging.ini
@@ -13,15 +13,16 @@ handlers=console, file_handler
 
 [handler_console]
 class=logging.StreamHandler
+filename=console.log
 level=DEBUG
 formatter=simple
 
 [handler_file_handler]
 class=logging.handlers.TimedRotatingFileHandler
-filename=app.log
-when=midnight
-backupCount=7
+# filename=app.log
+args=('uvicorn.log','midnight', 1, 7)
 formatter=simple
 
 [formatter_simple]
-format=%(asctime)s - %(levelname)s - %(module)s - %(message)s
+# format=%%(asctime)s | %%(levelname)-8s | %%(filename)s-%%(funcName)s-%%(lineno)04d | %%(message)s
+format = %(asctime)s | [%(levelname)8s] | %(message)s | (%(filename)s:%(lineno)s)
