Enhanced the logging module, changed models. Logic for services and routing has been enhanced to work with OpenAI API.

--- a/logging.ini
+++ b/logging.ini
@@ -8,21 +8,23 @@ keys=console, file_handler
 keys=simple
 
 [logger_root]
-level=INFO
+level=DEBUG
 handlers=console, file_handler
 
 [handler_console]
 class=logging.StreamHandler
-filename=console.log
-level=DEBUG
+; filename=console.log
+level=INFO
 formatter=simple
 
 [handler_file_handler]
 class=logging.handlers.TimedRotatingFileHandler
+level=DEBUG
 # filename=app.log
-args=('uvicorn.log','midnight', 1, 7)
+args=(__import__("datetime").datetime.now().strftime('%%Y-%%m-%%d_Uvicorn.log'),'midnight', 1, 7)
 formatter=simple
 
 [formatter_simple]
-# format=%%(asctime)s | %%(levelname)-8s | %%(filename)s-%%(funcName)s-%%(lineno)04d | %%(message)s
-format = %(asctime)s | [%(levelname)8s] | %(message)s | (%(filename)s:%(lineno)s)
+;  format=%%(asctime)s | %%(levelname)-8s | %%(filename)s-%%(funcName)s-%%(lineno)04d | %%(message)s
+; format = %(asctime)s | [%(levelname)8s] | %(message)s | (%(filename)s:%(lineno)s)
+format=%(asctime)s | %(levelname)-8s | %(filename)s-%(funcName)s-%(lineno)04d | %(message)s
