--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Set up Git user
+        run: |
+          git config --local user.email "githubactions"
+          git config --local user.name "githubactions"
       - name: Create tag
         run: |
           git tag -a "v$(git rev-parse --short HEAD)" -m "Automatic tag for push"
